--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@types/node": "^22.12.0",
     "fastify": "^5.2.1",
+    "ollama": "^0.5.12",
     "tsx": "^4.19.2"
   },
   "keywords": [],
