--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "tsx src/server.ts",
+    "dev": "nodemon --ext ts --exec tsx src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "test": "vitest",
@@ -17,6 +17,8 @@
     "eslint": "^9.19.0",
     "fastify-cli": "^7.3.0",
     "globals": "^15.14.0",
+    "nodemon": "^3.1.9",
+    "pino-pretty": "^13.0.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0",
     "vitest": "^3.0.4"
@@ -25,6 +27,7 @@
     "@types/node": "^22.12.0",
     "fastify": "^5.2.1",
     "ollama": "^0.5.12",
+    "pino": "^9.6.0",
     "tsx": "^4.19.2"
   },
   "keywords": [],
