--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@types/node": "^22.12.0",
     "fastify": "^5.2.1",
+    "jsonrepair": "^3.12.0",
     "ollama": "^0.5.12",
     "pino": "^9.6.0",
     "tsx": "^4.19.2"
